--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -1,16 +1,183 @@
+{% extends "base.html" %}
+
 {% block content %}
-	<div>
-		<h1>
-			{{ book.name }}
-		</h1>
-	</div>
-	<div>
-		{{ book.created }}
-	</div>
-	<div>
-		{{ author }}
-	</div>
-	<p> {{ book.description|safe }}</p>
-	<img src="{{ book.photo.url }}">
-	<span>{{ book.get_status_display }}</span>
+    <section id="single-book" class="single-book bg-primary text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-sm-12 text-center">
+                    {% include "book/includes/book_full_thumbnail.html" with image=book.photo %}
+                </div>
+                <div class="col-md-7 col-sm-12">
+                    <h2 class="section-heading">{{ book.name }}</h2>
+                    <div class="row">
+                        <div class="col-md-8 attributes">
+                            <ul>
+                                <li>
+                                    <span>Автор:</span>
+                                    <a href="catalogue.html">{{ book.author }}</a>
+                                </li>
+                                <li>
+                                    <span>Жанр:</span>
+                                    <a href="catalogue.html">{{ book.genre }}</a>
+                                </li>
+                                <li>
+                                    <span>Категорія:</span>
+                                    <a href="catalogue.html">{{ book.category }}</a>
+                                </li>
+                                <li>
+                                    <span>Мова:</span>
+                                    <a href="catalogue.html">{{ book.language }}</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4">
+                            {% if is_available %}
+                                <a href="#form" class="btn btn-outline btn-xl page-scroll">Доступно!</a>
+                            {% else %}
+                                <span class="btn btn-outline btn-xl">Не доступно :(</span>
+                            {% endif %}
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="description">
+                        {{ book.description }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="owner" class="owner">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2>Власник</h2>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="inner-container">
+                <div class="contacts col-md-10">
+                    <a href="//fb.com/dmyutro" class="social">fb: dima.kov</a>
+                    <a href="{{ book.owner.get_absolute_url }}" class="name">{{ book.owner.get_full_name }}</a>
+                    <div class="description">
+                        {{ book.owner.about }}
+                    </div>
+                </div>
+                <div class="avatar col-md-2">
+                    <a href="{{ book.owner.get_absolute_url }}">
+                        <img src="{{ book.owner.avatar.url }}" class="img-responsive img-circle">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="history" class="history bg-principal">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2>Історія</h2>
+                        <p class="text-muted">Хто читав {{ book.author }} "{{ book.name }}"?</p>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="container">
+                    <div class="col-lg-12">
+                        <ul class="timeline">
+                            {% for book_reading in book.book_readings.all %}
+                                <li {% if forloop.counter|divisibleby:2 %}class="timeline-inverted"{% endif %}>
+                                    <div class="timeline-image">
+                                        {% include "users/includes/user_avatar_thumbnail.html" with image=book_reading.user.avatar %}
+                                    </div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h4>{{ book_reading.user.get_full_name }}</h4>
+                                            <h5>{{ book_reading.date_start }} - {{ book_reading.date_end }}</h5>
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p class="text-muted">
+                                                {{ book_reading.feelings }}
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="line"></div>
+                                </li>
+                            {% endfor %}
+                            {% if request.user.is_authenticated %}
+                                <li
+                                    {% if not book.book_readings.all.count|divisibleby:2 %}
+                                        class="timeline-inverted"
+                                    {% endif %}
+                                >
+                                    <div class="timeline-image">
+                                        <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/3" alt="">
+                                    </div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h4>{{ request.user.get_full_name }}</h4>
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p>Бери і читай книгу. В тебе достатньо <span class="delighted">можливостей.</span> Не прогав шанс!</p>
+                                            <div class="text-center vertical-center">
+                                                <a href="#form" class="btn btn-outline btn-xl page-scroll">Доступно!</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="form" class="form">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2>Взяти почитати</h2>
+                        <p class="text-muted">
+                            Швидше заповнюй цю форму! Власник книги отримає сповіщення про те, що ти хочеш почитати книгу "Людина розумна" і надішле тобі книгу за цими даними.
+                        </p>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <form action="" class="tertiary" method="POST">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6">
+                        <input type="text" name="pib" placeholder="ПІБ">
+                        <input type="text" name="phone" placeholder="Номер телефону">
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <input type="text" name="city" placeholder="Місто">
+                        <input type="text" name="department_number" placeholder="Номер відділення">
+                    </div>
+                </div>
+                <div class="text-center vertical-center">
+                    <button class="btn btn-filled-tertiary btn-xl" type="submit">Надіслати</button>
+                </div>
+            </form>
+        </div>
+    </section>
+    <section id="contact" class="contact bg-primary">
+        <div class="container">
+            <h2>Розкажи всім <i class="fa fa-share-alt"></i> про <br> таку чудову книгу!</h2>
+            <ul class="list-inline list-social">
+                <li class="social-twitter">
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                </li>
+                <li class="social-facebook">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li class="social-google-plus">
+                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                </li>
+            </ul>
+        </div>
+    </section>
 {% endblock content %}
