--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -764,16 +764,19 @@ section.user-header {
     .info {
         ul {
             list-style-type: none;
-            padding: 10px;
+            padding: 0px;
             & > li {
                 margin-top: 7px;
                 & > span {
                     font-size: 16px;
                     text-decoration: underline;
+                    min-width: 150px;
+                    display: inline-block;
                 }
-                & > a {
-                    font-size: 18px;
-                    font-weight: 800;
+                & > p {
+                    font-size: 15px;
+                    color: @theme-tertiary;
+                    display: inline;
                 }
             }
         }
