--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -31,7 +31,7 @@
                             </ul>
                         </div>
                         <div class="col-md-4">
-                            {% if is_available %}
+                            {% if book.is_available %}
                                 <a href="#form" class="btn btn-outline btn-xl page-scroll">Доступно!</a>
                             {% else %}
                                 <span class="btn btn-outline btn-xl">Не доступно :(</span>
@@ -86,49 +86,7 @@
             <div class="row">
                 <div class="container">
                     <div class="col-lg-12">
-                        <ul class="timeline">
-                            {% for book_reading in book.book_readings.all %}
-                                <li {% if forloop.counter|divisibleby:2 %}class="timeline-inverted"{% endif %}>
-                                    <div class="timeline-image">
-                                        {% include "users/includes/user_avatar_thumbnail.html" with image=book_reading.user.avatar %}
-                                    </div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h4>{{ book_reading.user.get_full_name }}</h4>
-                                            <h5>{{ book_reading.date_start }} - {{ book_reading.date_end }}</h5>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p class="text-muted">
-                                                {{ book_reading.feelings }}
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="line"></div>
-                                </li>
-                            {% endfor %}
-                            {% if request.user.is_authenticated %}
-                                <li
-                                    {% if not book.book_readings.all.count|divisibleby:2 %}
-                                        class="timeline-inverted"
-                                    {% endif %}
-                                >
-                                    <div class="timeline-image">
-                                        <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/3" alt="">
-                                    </div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h4>{{ request.user.get_full_name }}</h4>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>Бери і читай книгу. В тебе достатньо <span class="delighted">можливостей.</span> Не прогав шанс!</p>
-                                            <div class="text-center vertical-center">
-                                                <a href="#form" class="btn btn-outline btn-xl page-scroll">Доступно!</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            {% endif %}
-                        </ul>
+                        {% include "book/includes/books_timeline.html" with book_readings=book.book_readings.all %}
                     </div>
                 </div>
             </div>
