--- a/common/templates/common/main.html
+++ b/common/templates/common/main.html
@@ -153,19 +153,9 @@
                 </div>
             </div>
             <div class="row">
-            	{% for book in books %}
-	                <div class="col-md-4 col-sm-6">
-	                    <figure class="imghvr-fold-up text-center">
-                            {% include "book/includes/book_cart_thumbnail.html" with image=book.photo %}
-	                        <figcaption>
-	                            <h3>{{ book.name }}</h3>
-	                            <p>{{ book.description }}</p>
-	                            <a href="{{ book.get_absolute_url }}#form" class="btn btn-outline btn-xl">Доступно!</a>
-	                        </figcaption>
-	                        <a href="{{ book.get_absolute_url }}"></a>
-	                    </figure>
-	                </div>
-            	{% endfor %}
+                {% for book in books %}
+                    {% include "common/includes/book_card.html" with book=book %}
+                {% endfor %}
             </div>
             <div class="text-center more-link">
                 <a href="" class="btn btn-filled-tertiary btn-xl" type="submit">Більше</a>
