--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -73,77 +73,16 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Додані книги</h2>
-                        <p class="text-muted">Всього: 6 штук!</p>
+                        <h2>{% trans "Додані книги" %}</h2>
+                        <p class="text-muted">Всього: {{ user.books.all.count }} штук!</p>
                         <hr>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <figure class="imghvr-fold-up text-center">
-                        <img src="img/images/course01.jpg" class="img-responsive">
-                        <figcaption>
-                            <h3>Course Name</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-                            <a href="#" class="btn btn-outline btn-xl">Доступно!</a>
-                        </figcaption>
-                        <a href="#"></a>
-                    </figure>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <figure class="imghvr-fold-up text-center">
-                        <img src="img/images/course02.jpg" class="img-responsive">
-                        <figcaption>
-                            <h3>Course Name</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-                            <a href="#" class="btn btn-outline btn-xl">Доступно!</a>
-                        </figcaption>
-                        <a href="#"></a>
-                    </figure>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <figure class="imghvr-fold-up text-center">
-                        <img src="img/images/course03.jpg" class="img-responsive">
-                        <figcaption>
-                            <h3>Course Name</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-                            <a href="#" class="btn btn-outline btn-xl">Доступно!</a>
-                        </figcaption>
-                        <a href="#"></a>
-                    </figure>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <figure class="imghvr-fold-up text-center">
-                        <img src="img/images/course04.jpg" class="img-responsive">
-                        <figcaption>
-                            <h3>Course Name</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-                            <a href="#" class="btn btn-outline btn-xl">Доступно!</a>
-                        </figcaption>
-                        <a href="#"></a>
-                    </figure>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <figure class="imghvr-fold-up text-center">
-                        <img src="img/images/course05.jpg" class="img-responsive">
-                        <figcaption>
-                            <h3>Course Name</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-                        </figcaption>
-                        <a href="#"></a>
-                    </figure>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <figure class="imghvr-fold-up text-center">
-                        <img src="img/images/course06.jpg" class="img-responsive">
-                        <figcaption>
-                            <h3>Course Name</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam atque, nostrum veniam consequatur libero fugiat, similique quis.</p>
-                        </figcaption>
-                        <a href="#"></a>
-                    </figure>
-                </div>
+                {% for book in user.books.all %}
+                    {% include "common/includes/book_card.html" with book=book %}
+                {% endfor %}
             </div>
         </div>
     </section>
@@ -153,8 +92,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
-                        <h2>Max Kervud</h2>
-                        <p class="text-muted">прочитав 10 книг:</p>
+                        <h2>{{ user.get_full_name }}</h2>
+                        <p class="text-muted">{% trans "прочитав книг:" %} {{ user.book_readings.all.count }}</p>
                         <hr>
                     </div>
                 </div>
@@ -162,87 +101,7 @@
             <div class="row">
                 <div class="container">
                     <div class="col-lg-12">
-                        <ul class="timeline">
-                            <li>
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/1" alt="">
-                                </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4>Step One</h4>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p class="text-muted">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="line"></div>
-                            </li>
-                            <li class="timeline-inverted">
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/2" alt="">
-                                </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4>Step Two</h4>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p class="text-muted">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="line"></div>
-                            </li>
-                            <li>
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/3" alt="">
-                                </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4>Step Three</h4>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p class="text-muted">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="line"></div>
-                            </li>
-                            <li class="timeline-inverted">
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/4" alt="">
-                                </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4>Step Three</h4>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p class="text-muted">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="line"></div>
-                            </li>
-                            <li>
-                                <div class="timeline-image">
-                                    <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/5" alt="">
-                                </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4>Bonus Step</h4>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p class="text-muted">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                        </p>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
+                        {% include "book/includes/books_timeline.html" with book_readings=user.book_readings.all user_timeline=True%}
                     </div>
                 </div>
             </div>
