--- a/static/css/new-age.css
+++ b/static/css/new-age.css
@@ -203,6 +203,8 @@ input:focus::-webkit-input-placeholder {
   font-size: 12px;
   padding-top: 5px;
   padding-bottom: 5px;
+  line-height: 35px;
+  font-weight: 600;
 }
 .navbar-default .nav > li > a,
 .navbar-default .nav > li > a:focus {
@@ -211,6 +213,7 @@ input:focus::-webkit-input-placeholder {
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
   color: #fdcc52;
+  cursor: pointer;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
@@ -220,6 +223,17 @@ input:focus::-webkit-input-placeholder {
 .navbar-default .nav > li.active > a:hover,
 .navbar-default .nav > li.active > a:focus:hover {
   background-color: transparent;
+}
+.navbar-default .nav > li.dropdown.open a {
+  background-color: transparent;
+}
+.navbar-default .nav > li.dropdown img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+}
+.navbar-default .nav > li.dropdown .dropdown-menu li a:hover {
+  background-color: #eeeeee;
 }
 @media (min-width: 768px) {
   .navbar-default {
