--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -788,7 +788,8 @@ section.catalogue-books{
 /* --- end --- Catalogue books --- end --- */
 
 /* --- User page --- */
-section.user-header {
+section.user-header,
+section.form-section {
     .info {
         ul {
             list-style-type: none;
