--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -579,6 +579,10 @@ section.form-section {
             box-shadow: 0 0 10px @theme-tertiary;
         }
     }
+    strong {
+        color: @theme-tertiary;
+        display: block;
+    }
 }
 
 section.history {
