--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="user-menu">
                                 <li><a href="{{ request.user.get_absolute_url }}">{% trans "Мій аккаунт" %}</a></li>
-                                <li><a href="#">{% trans "Редагувати аккаунт" %}</a></li>
+                                <li><a href="{% url 'users:edit' user.pk %}">{% trans "Редагувати аккаунт" %}</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="{% url 'users:logout' %}">{% trans "Вийти" %}</a></li>
                             </ul>
