--- a/users/templates/users/edit.html
+++ b/users/templates/users/edit.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 
+{% block title %}{{ user.get_full_name }} - {% trans "Редагувати" %} - {{ block.super }}{% endblock title %}
 
 {% block content %}
     <section id="form-section" class="form-section bg-primary">
