--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 
+{% block title %}{{ user.get_full_name }} - {{ block.super }}{% endblock title %}
 
 {% block content %}
     <section id="user-header" class="user-header bg-primary">
