--- a/users/templates/users/edit.html
+++ b/users/templates/users/edit.html
@@ -51,6 +51,10 @@
                                 <strong>{{ form.reading_preferences.errors.as_text }}</strong>
                                 {{ form.reading_preferences }}
 
+                                {{ form.phone.label_tag }}
+                                <strong>{{ form.phone.errors.as_text }}</strong>
+                                {{ form.phone }}
+
                                 {{ form.city.label_tag }}
                                 <strong>{{ form.city.errors.as_text }}</strong>
                                 {{ form.city }}
