--- a/common/templates/common/emails/take_book.html
+++ b/common/templates/common/emails/take_book.html
@@ -127,6 +127,12 @@
             background: #555555 !important;
             border-color: #555555 !important;
         }
+        ul.crenadials{
+            list-style-type: none;
+        }
+        ul.crenadials p{
+            display: inline;
+        }
 
         /* Media Queries */
         @media screen and (max-width: 600px) {
@@ -226,12 +232,15 @@
                                                     {{ BASE_URL }}{{ book.photo.url }}
                                                     {{ BASE_URL }}{{ user.avatar.url }}
                                                 {% endcomment %}
-                                                <img src="http://placehold.it/200" width="200" height="" alt="alt_text" border="0" align="center" style="width: 100%; max-width: 200px; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                <a href="{{ BASE_URL }}{{ book.get_absolute_url }}">
+                                                    <img src="http://placehold.it/200" width="200" height="" alt="alt_text" border="0" align="center" style="width: 100%; max-width: 200px; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                </a>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td style="text-align: center;font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; padding: 10px 10px 0;" class="stack-column-center">
-                                                <p style="margin: 0;">Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora per conubia nostra, per torquent inceptos&nbsp;himenaeos.</p>
+                                                <h3>{{ book.name }}</h3>
+                                                <p style="margin: 0;">{{ book.description|truncatewords:15 }}</p>
                                             </td>
                                         </tr>
                                     </table>
@@ -240,12 +249,15 @@
                                     <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="font-size: 14px;text-align: left;">
                                         <tr>
                                             <td style="text-align: center; padding: 0 10px;">
-                                                <img src="http://placehold.it/200" width="200" height="" alt="alt_text" border="0" align="center" style="width: 100%; max-width: 200px; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                <a href="{{ BASE_URL }}{{ user.get_absolute_url }}">
+                                                    <img src="http://placehold.it/200" width="200" height="" alt="alt_text" border="0" align="center" style="width: 100%; max-width: 200px; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                                </a>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td style="text-align: center;font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; padding: 10px 10px 0;" class="stack-column-center">
-                                                <p style="margin: 0;">Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora per conubia nostra, per torquent inceptos&nbsp;himenaeos.</p>
+                                                <h3>{{ user.get_full_name }}</h3>
+                                                <p style="margin: 0;">{{ user.about|striptags|truncatewords:15 }}</p>
                                             </td>
                                         </tr>
                                     </table>
@@ -260,13 +272,51 @@
                     <td bgcolor="#ffffff">
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tr>
+                                <td style="padding: 40px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                    <h2 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 18px; line-height: 21px; color: #333333; font-weight: bold;">
+                                        Дані для відправки книги:
+                                    </h2>
+
+                                    <p style="margin: 0;">
+                                        <ul class="crenadials">
+                                            <li>
+                                                <span style="font-weight:bold">Ім'я, Прізвище:</span>
+                                                <p>Ковальчук Дмитро</p>
+                                            </li>
+                                            <li>
+                                                <span style="font-weight:bold">Телефон:</span>
+                                                <p>+380963843459</p>
+                                            </li>
+                                            <li>
+                                                <span style="font-weight:bold">Місто:</span>
+                                                <p>Броди</p>
+                                            </li>
+                                            <li>
+                                                <span style="font-weight:bold">Номер відділення:</span>
+                                                <p>№2</p>
+                                            </li>
+                                        </ul>
+                                    </p>
+                                    <p style="margin:0;">
+                                        Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent laoreet malesuada cursus. Maecenas scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut&nbsp;erat.
+                                    </p>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td bgcolor="#ffffff">
+                        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+                            <tr>
                                 <td style="padding: 0 40px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                                     <!-- Button : BEGIN -->
                                     <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" style="margin: auto;">
                                         <tr>
                                             <td style="border-radius: 3px; background: #222222; text-align: center;" class="button-td">
                                                 <a href="http://www.google.com" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
-                                                    <span style="color:#ffffff;" class="button-link">&nbsp;&nbsp;&nbsp;&nbsp;A Button&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                                    <span style="color:#ffffff;" class="button-link">Підтверджую</span>
                                                 </a>
                                             </td>
                                         </tr>
