--- a/common/templates/common/emails/take_book.html
+++ b/common/templates/common/emails/take_book.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
@@ -298,7 +300,9 @@
                                         </ul>
                                     </p>
                                     <p style="margin:0;">
-                                        Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent laoreet malesuada cursus. Maecenas scelerisque congue eros eu posuere. Praesent in felis ut velit pretium lobortis rhoncus ut&nbsp;erat.
+                                        {% blocktrans %}
+                                            Натисніть кнопку "Підтверджую", щоб точно ми знали, що ви побачили це повідомлення і надішлете книгу Новою Поштою найближчим часом (1-2 дні).
+                                        {% endblocktrans %}
                                     </p>
                                 </td>
                             </tr>
@@ -315,7 +319,7 @@
                                     <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" style="margin: auto;">
                                         <tr>
                                             <td style="border-radius: 3px; background: #222222; text-align: center;" class="button-td">
-                                                <a href="http://www.google.com" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
+                                                <a href="{{ BASE_URL }}{% url 'book:booking-owner-confirm' pk=book_reading.pk email=user.email token=user.get_token %}" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
                                                     <span style="color:#ffffff;" class="button-link">Підтверджую</span>
                                                 </a>
                                             </td>
