--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -105,7 +105,7 @@
             <div class="row">
                 <div class="container">
                     <div class="col-lg-12">
-                        {% include "book/includes/books_timeline.html" with book_readings=user.book_readings.all user_timeline=True%}
+                        {% include "book/includes/books_timeline.html" with book_readings=user.book_readings.all user_timeline=True display_books=True %}
                     </div>
                 </div>
             </div>
