--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -583,6 +583,9 @@ section.form-section {
         color: @theme-tertiary;
         display: block;
     }
+    #cropper {
+        margin-top: 50px;
+    }
 }
 
 section.history {
