--- a/book/templates/book/add.html
+++ b/book/templates/book/add.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
 
+{% load static %}
 {% load i18n %}
 
 {% block title %}{% trans "Додати книгу" %} - {{ block.super }}{% endblock title %}
 
+{% block css %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/croppie/2.5.0/croppie.min.css">
+{% endblock css %}
+
 {% block content %}
     <section id="form-section" class="form-section bg-primary">
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="container">
                 <div class="row">
@@ -29,9 +34,18 @@
                             <strong>{{ form.name.errors.as_text }}</strong>
                             {{ form.name }}
 
+                            {{ form.photo.label_tag }}
+                            <strong>{{ form.photo.errors.as_text }}</strong>
+                            {{ form.photo }}
+
                             {{ form.description.label_tag }}
                             <strong>{{ form.description.errors.as_text }}</strong>
                             {{ form.description }}
+
+                            {{ form.point_left }}
+                            {{ form.point_top }}
+                            {{ form.point_width }}
+                            {{ form.point_height }}
                         </div>
                         <div class="text-center">
                             <button type="submit" class="btn btn-filled-tertiary btn-xl">{% trans "Додати" %}</button>
@@ -39,14 +53,45 @@
                     </div>
                     <div class="col-md-5 col-sm-12 text-center">
                         <div class="row">
-                            <div class="image">
-                                {% include "users/includes/user_avatar_profile_thumbnail.html" with image=user.avatar %}
-                            </div>
+                            <div id="cropper"></div>
                         </div>
                     </div>
-                    <div class="clearfix"></div>
                 </div>
             </div>
         </form>
     </section>
 {% endblock content %}
+
+{% block js %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/croppie/2.5.0/croppie.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        var cropper = $('#cropper').croppie({
+            viewport: { width: 250, height: 150 },
+            boundary: { width: 300, height: 200 },
+            showZoomer: true,
+        });
+
+        function readFile(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function(e) {
+                    $('#cropper').croppie('bind', {
+                        url: e.target.result
+                    });
+                }
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $('input#id_photo').on('change', function() {
+            readFile(this);
+        });
+        cropper.on('update', function(cr) {
+            var data = cropper.croppie('get');
+            $('input#id_point_left').val(data.points[0]);
+            $('input#id_point_top').val(data.points[1]);
+            $('input#id_point_width').val(data.points[2]);
+            $('input#id_point_height').val(data.points[3]);
+        });
+    </script>
+{% endblock js %}
