--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,9 @@
     <link rel="stylesheet" href="{% static "lib/device-mockups/device-mockups.min.css" %}">
     <link rel="stylesheet" href="{% static "lib/imagehover/imagehover.min.css" %}">
 
+    {% block css %}{% endblock css %}
     <!-- Theme CSS -->
-    <link href="{% static "css/new-age.min.css" %}" rel="stylesheet">
-
+    <link rel="stylesheet" href="{% static "css/new-age.min.css" %}" >
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -124,6 +124,7 @@
 
     <!-- Theme JavaScript -->
     <script src="{% static "js/new-age.min.js" %}"></script>
+    {% block js %}{% endblock js %}
 
 </body>
 
