--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -85,7 +85,7 @@
             </div>
             <div class="row">
                 {% for book in user.books.all %}
-                    {% include "common/includes/book_card.html" with book=book %}
+                    {% include "book/includes/book_card.html" with book=book %}
                 {% endfor %}
             </div>
         </div>
