--- a/book/templates/book/add.html
+++ b/book/templates/book/add.html
@@ -7,6 +7,26 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static "lib/croppie/croppie.css" %}">
+    <style type="text/css">
+        .autocomplete .select2-container {
+            min-width: 100%;
+        }
+        .autocomplete .select2-container .select2-selection--single {
+            height: 35px;
+            width: 100%;
+            border: 1px solid #dc2430;
+        }
+        .autocomplete .select2-container--default .select2-selection--single .select2-selection__rendered {
+            line-height: 35px;
+            color: #dc2430;
+        }
+        .autocomplete .select2-container--default .select2-selection--single .select2-selection__clear {
+            color: gray;
+        }
+        .autocomplete .select2-container--default .select2-selection--single .select2-selection__arrow {
+            height: 35px;
+        }
+    </style>
 {% endblock css %}
 
 {% block content %}
@@ -18,47 +38,60 @@
                     <div class="col-md-7 col-sm-12">
                         <div class="row">
                             <h1>{% trans "Додати книгу" %}</h1>
-                            {% if form.errors %}
-                                <div class="alert alert-danger" role="alert">{% trans "Виправте помилки нижче" %}</div>
-                            {% endif %}
-                            {% if form.non_field_errors %}
-                                {% for err in form.non_field_errors %}
-                                    <strong>{{ err }}</strong>
-                                {% endfor %}
-                            {% endif %}
-                            {{ form.author.label_tag }}
-                            <strong>{{ form.author.errors.as_text }}</strong>
-                            {{ form.author }}
+                            <div class="row">
+                                {% if form.errors %}
+                                    <div class="alert alert-danger" role="alert">{% trans "Виправте помилки нижче" %}</div>
+                                {% endif %}
+                                {% if form.non_field_errors %}
+                                    {% for err in form.non_field_errors %}
+                                        <strong>{{ err }}</strong>
+                                    {% endfor %}
+                                {% endif %}
 
-                            {{ form.name.label_tag }}
-                            <strong>{{ form.name.errors.as_text }}</strong>
-                            {{ form.name }}
+                                <div class="col-md-6 col-sm-6">
 
-                            {{ form.photo.label_tag }}
-                            <strong>{{ form.photo.errors.as_text }}</strong>
-                            {{ form.photo }}
+                                    {{ form.photo.label_tag }}
+                                    <strong>{{ form.photo.errors.as_text }}</strong>
+                                    {{ form.photo }}
 
-                            {{ form.category.label_tag }}
-                            <strong>{{ form.category.errors.as_text }}</strong>
-                            {{ form.category }}
+                                    {{ form.author.label_tag }}
+                                    <strong>{{ form.author.errors.as_text }}</strong>
+                                    {{ form.author }}
 
-                            {{ form.genre.label_tag }}
-                            <strong>{{ form.genre.errors.as_text }}</strong>
-                            {{ form.genre }}
+                                    {{ form.name.label_tag }}
+                                    <strong>{{ form.name.errors.as_text }}</strong>
+                                    {{ form.name }}
 
+                                    <div class="autocomplete">
+                                        {{ form.category.label_tag }}
+                                        <strong>{{ form.category.errors.as_text }}</strong>
+                                        {{ form.category }}
+                                    </div>
 
-                            {{ form.language.label_tag }}
-                            <strong>{{ form.language.errors.as_text }}</strong>
-                            {{ form.language }}
+                                    <div class="autocomplete">
+                                        {{ form.genre.label_tag }}
+                                        <strong>{{ form.genre.errors.as_text }}</strong>
+                                        {{ form.genre }}
+                                    </div>
 
-                            {{ form.description.label_tag }}
-                            <strong>{{ form.description.errors.as_text }}</strong>
-                            {{ form.description }}
+                                    {{ form.language.label_tag }}
+                                    <strong>{{ form.language.errors.as_text }}</strong>
+                                    {{ form.language }}
+                                </div>
 
-                            {{ form.point_left }}
-                            {{ form.point_top }}
-                            {{ form.point_width }}
-                            {{ form.point_height }}
+                                <div class="col-md-6 col-sm-6">
+                                    {{ form.description.label_tag }}
+                                    <p class="">{{ form.description.help_text }}</p>
+                                    <strong>{{ form.description.errors.as_text }}</strong>
+                                    {{ form.description }}
+
+                                    {{ form.point_left }}
+                                    {{ form.point_top }}
+                                    {{ form.point_width }}
+                                    {{ form.point_height }}
+                                </div>
+                            </div>
+
                         </div>
                         <div class="text-center">
                             <button type="submit" class="btn btn-filled-tertiary btn-xl">{% trans "Додати" %}</button>
