--- a/static/less/new-age.less
+++ b/static/less/new-age.less
@@ -569,11 +569,11 @@ section.form-section {
     label {
         font-size: 14px;
     }
-    input, textarea {
+    input, textarea, select {
         margin: 0 0 10px 0;
         padding: 5px;
         border: 1px solid @theme-tertiary;
-        color: @theme-primary;
+        color: @theme-tertiary;
         font-weight: 700;
         &:focus {
             box-shadow: 0 0 10px @theme-tertiary;
@@ -585,6 +585,16 @@ section.form-section {
     }
     #cropper {
         margin-top: 50px;
+    }
+    select {
+        line-height: 35px;
+        height: 35px;
+        width: 100%;
+        background-color: white;
+        border-radius: 5px;
+    }
+    p {
+        font-size: 14px;
     }
 }
 
