--- a/common/templates/common/emails/take_book.html
+++ b/common/templates/common/emails/take_book.html
@@ -82,19 +82,19 @@
                             <ul class="crenadials">
                                 <li>
                                     <span style="font-weight:bold">Ім'я, Прізвище:</span>
-                                    <p>Ковальчук Дмитро</p>
+                                    <p>{{ book_reading.full_name }}</p>
                                 </li>
                                 <li>
                                     <span style="font-weight:bold">Телефон:</span>
-                                    <p>+380963843459</p>
+                                    <p>{{ book_reading.phone }}</p>
                                 </li>
                                 <li>
                                     <span style="font-weight:bold">Місто:</span>
-                                    <p>Броди</p>
+                                    <p>{{ book_reading.city }}</p>
                                 </li>
                                 <li>
                                     <span style="font-weight:bold">Номер відділення:</span>
-                                    <p>№2</p>
+                                    <p>{{ book_reading.novaposhta_number }}</p>
                                 </li>
                             </ul>
                         </p>
