--- a/book/templates/book/includes/book_card.html
+++ b/book/templates/book/includes/book_card.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="col-md-4 col-sm-6">
+<div class="item col-md-4 col-sm-6 text-center">
     <figure class="imghvr-fold-up text-center">
         {% include "book/includes/book_card_thumbnail.html" with image=book.photo %}
         <figcaption>
